Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27445

Scrolling issue with single-column menu when using mouse

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.x, 5.0.0 Beta 2
    • 4.8.3, 5.0.0 Beta 1
    • Widgets: Main Window
    • None
    • Win 7
    • Qt5: fe8eb057fa05433e96de21df34871647f421f962, Qt4: b6db048a63ed2f861201324bdbc0257736f4ddde

      Steps to reproduce this bug:

      1) Open Windows' "Display" control panel, and go to the "Adjust Resolution" sub-section. Set the Windows desktop screen resolution to a setting that has 900 vertical pixels (e.g. 1600x900 or 1440x900 or etc).

      2) Compile and run the attached project (modified Qt Scribble Example)

      3) In the Scribble window, click on the Help menu to open the menu. Note that the menu is shown as a single column (as expected), and that the menu is slightly taller than the screen (as expected), so there is a down-scroll-arrow at the bottom of the menu (as expected).

      4) Move the mouse down to the down-scroll-arrow at the bottom of the menu.

      Actual result:
      When the mouse is over the down-scroll-arrow, the menu does NOT scroll down.

      Expected result:
      Menu would scroll down at this point, so that the user can see the "Dummy 42" and "Dummy 43" entries at the bottom of the menu.

      Using the arrow keys to access those entries does work, but they should be accessible using solely the mouse as well.

        1. scribble.zip
          10 kB
          Qt Support
        For Gerrit Dashboard: QTBUG-27445
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes